# athens

./: .gitignore  Athens.spec  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cubase/: Melbourne Instruments_Roto-Control.js
packaging/: Athens.iss
reaper/: roto-reaper.ReaperOSC  roto_fx_feed.lua  roto_fx_toggle.lua
scripts/: app_entry.py  build-linux.sh  build-macos.sh  build-windows.ps1  install-cubase.sh  make-public.sh  pad_iconset.py
src/athens/: __init__.py  backup.py  bringup.py  cli.py  config.py  library.py  links.py
src/athens/api/: __init__.py  rpc.py  service.py  ws.py
src/athens/bridge/: __init__.py  bridge.py  common.py  logic_bridge.py
src/athens/daw/: __init__.py  backend.py  cubase_contract.py  cubase_source.py  detect.py  echo.py  fx_feed.py  hui.py  mock.py  protools_source.py  reaper.py  reaper_source.py  script_install.py  source.py  system_source.py
src/athens/protocol/: __init__.py  codec.py  constants.py
src/athens/roto/: __init__.py  client.py  logic_client.py  midi.py  proxy.py  sysex_client.py  transport.py
src/athens/sysex/: __init__.py  (+2 more)
tests/: test_api.py  test_backup.py  test_bridge.py  test_bringup.py  test_codec.py  test_cubase_source.py  test_daw_swap.py  test_detect.py  test_fx_feed.py  test_hotplug.py  test_library.py  test_link_proxy.py  test_logic_bridge.py  test_protools_source.py  test_realmode.py  test_reaper.py  test_reaper_backend.py  test_reaper_liveness.py  test_script_install.py  test_shell.py  test_sysex.py  test_sysex_client.py  test_system_source.py  test_transport.py
(+9 files in other folders)
