[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roto-reaper"
version = "0.1.0"
description = "Bridge Melbourne Instruments ROTO-CONTROL to REAPER (and other DAWs) over the official Serial API + MIDI"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",     # serial config channel (CDC COM port)
    # macOS system-control surfaces — bundled so users never pip-install for a toggle
    'pyobjc-framework-Quartz>=10; sys_platform == "darwin"',
    'pyobjc-framework-ApplicationServices>=10; sys_platform == "darwin"',
]

[project.optional-dependencies]
midi = ["mido>=1.3", "python-rtmidi>=1.5"]   # real-time value channel (USB-MIDI)
osc = ["python-osc>=1.8"]                     # REAPER native OSC (MIX mode)
ui = ["websockets>=12", "pywebview>=5"]       # local API + webview shell
package = ["pyinstaller>=6", "pillow>=10"]    # build installers; pillow -> Windows .ico
dev = ["pytest>=8"]

[project.scripts]
athens = "athens.cli:main"          # the product name
roto-reaper = "athens.cli:main"     # kept as an alias

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
athens = ["ui/web/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
